# SoundBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker.compose.yml  migrate-db-to-state.ps1  package-lock.json  package.json  pyproject.toml  requirements.txt  web.sh
.github/: copilot-instructions.md
app/: __main__.py  app.py  main.py
app/core/: settings.py  state.py
app/discord/: client.py  commands.py
app/models/: sounds.py
app/web/: app.py  models.py  tsconfig.json  web.py
app/web/api/: api.py  db.py  index.py  sounds.py
app/web/routes/: db.py  index.py  sounds.py
app/web/static/: index.html  site.webmanifest  style.css
app/web/static/scripts/: .gitignore  clipboard.js  ui.js
app/web/static/src/scripts/: audio.ts  clipboard.ts  config.ts  dom-init.ts  soundboard-app.ts  soundboard-button.ts  ui.ts  util.ts  utils.ts
app/web/static/src/styles/: soundboard.css
app/web/static/styles/: .gitignore  soundboard.css
app/web/template/: index.html
mount/: db.json
src/soundbot/: __main__.py  app.py
src/soundbot/cli/: __init__.py  __main__.py  check_sounds.py  export_history.py  import_legacy.py  migrate_legacy.py  parse_legacy.py  regenerate_audio.py
src/soundbot/core/: settings.py  state.py  utils.py
src/soundbot/discord/: client.py
src/soundbot/models/: sounds.py
src/soundbot/services/: ffmpeg.py  sounds.py  voice.py  ytdlp.py
src/soundbot/web/: dependencies.py  logger.py  models.py  web.py  websocket.py
src/soundbot/web/routes/: db.py  index.py  router.py  settings.py  sounds.py  ws.py
web/: gulpfile.js
web/scripts/: audio.ts  config.ts  dom-init.ts  soundboard-app.ts  soundboard-button.ts  websocket.ts
web/template/: index.html
