[tool.poetry]
name = "soundbot"
version = "0.1.0"
description = ""
authors = ["UberKitten <566438+UberKitten@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.12"
discord-py = {extras = ["voice"], version = "^2.3.2"}
hypercorn = "^0.15.0"
uvloop = "^0.19.0"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
orjson = "^3.9.10"
jinja2 = "^3.1.2"
python-ffmpeg = "^2.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
