[project]
name = "soundbot"
version = "0.1.0"
description = "Discord soundboard bot with web interface"
authors = [{ name = "UberKitten", email = "566438+UberKitten@users.noreply.github.com" }]
requires-python = ">=3.14"
dependencies = [
    "discord-py[voice]>=2.5.2",
    "hypercorn>=0.17.3",
    "fastapi>=0.115.6",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.7.1",
    "orjson>=3.10.14",
    "jinja2>=3.1.5",
    "python-ffmpeg>=2.0.12",
]

[project.optional-dependencies]
unix = ["uvloop>=0.21.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soundbot"]
