[project]
name = "soundbot"
version = "0.1.0"
description = "Discord soundboard bot with web interface"
authors = [{ name = "UberKitten", email = "566438+UberKitten@users.noreply.github.com" }]
requires-python = ">=3.14"
dependencies = [
    "discord-py[voice]>=2.5.2",
    "hypercorn>=0.17.3",
    "fastapi>=0.115.6",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.7.1",
    "orjson>=3.10.14",
    "jinja2>=3.1.5",
    "python-ffmpeg>=2.0.12",
    "yt-dlp>=2024.12.23",
]

[project.optional-dependencies]
unix = ["uvloop>=0.21.0"]

[project.scripts]
soundbot-cli = "soundbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soundbot"]

[tool.pyright]
typeCheckingMode = "standard"

# Strict inference and analysis flags
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
enableReachabilityAnalysis = true
enableExperimentalFeatures = false
disableBytesTypePromotions = true

# Turn on all diagnostic reports
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "none"
reportGeneralTypeIssues = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "error"
reportInvalidTypeForm = "error"
reportImportCycles = "error"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportAbstractUsage = "error"
reportArgumentType = "error"
reportAssertTypeFailure = "error"
reportAssignmentType = "error"
reportAttributeAccessIssue = "error"
reportCallIssue = "error"
reportInconsistentOverload = "error"
reportIndexIssue = "error"
reportInvalidTypeArguments = "error"
reportNoOverloadImplementation = "error"
reportOperatorIssue = "error"
reportOptionalSubscript = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportRedeclaration = "error"
reportReturnType = "error"
reportTypedDictNotRequiredAccess = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"
# reportPrivateUsage = "none"
reportTypeCommentUsage = "error"
reportPrivateImportUsage = "none"
reportConstantRedefinition = "error"
reportDeprecated = "warning"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportPossiblyUnboundVariable = "error"
reportMissingSuperCall = "error"
reportUninitializedInstanceVariable = "error"
reportInvalidStringEscapeSequence = "error"
reportAssertAlwaysTrue = "error"
reportSelfClsParameterName = "error"
reportImplicitStringConcatenation = "error"
reportUnsupportedDunderAll = "error"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportImplicitOverride = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnusedCallResult = "warning"
reportUnusedCoroutine = "warning"
reportUnusedExcept = "warning"
reportUnusedExpression = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportMatchNotExhaustive = "error"
reportUnreachable = "error"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"

